--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 
 body{
   overflow: hidden;
+  font-family: 'Montserrat', Arial, sans-serif;
+  color: #545454;
 }
 
 a {
@@ -20,17 +22,7 @@ ul {
   list-style: none;
 }
 
-.container{
-  top: 0;
-  left: 0;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  padding: 20px;
-  padding-top: 5px;
-  overflow: hidden;
-}
+
 
 .things {
   margin-bottom: 80px;
@@ -46,20 +38,6 @@ ul {
   margin-right: 30;
 }
 
-.infos {
-  width: 42%;
-  height: 90%;
-  display: inline-block;
-}
-
-.content {
-  top: 50px;
-  width: 60%;
-  height: 90%;
-  position: relative;
-  display: inline-block;
-  padding-left: 50px;
-}
 
 footer{
   width: 100%;
@@ -81,4 +59,96 @@ footer{
 
 #url {
   color: rgb(166, 216, 39);
+}
+
+
+#searchResults{
+  position: absolute;
+  top: 40px; 
+}
+
+.grid{
+  display: grid;
+  grid-template-columns: 
+        [viewport-start] minmax(1em, 1fr)
+        [container-start] minmax(0, 80em) [container-end]
+        minmax(1em, 1fr) [viewport-end];
+
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  padding-top: 5px;
+  overflow: hidden;
+}
+
+.grid-central {
+  grid-column: container;
+}
+
+.navigation {
+  display: flex;
+  justify-content: inherit;
+  width: 40%;
+  padding-top: 20px;
+  padding-right: 5px;
+}
+
+.infos {
+}
+
+.content {
+  /*top: 50px;
+  width: 60%;
+  height: 90%;
+  position: relative;
+  display: inline-block;
+  padding-left: 50px;*/
+  padding-top: 20px;
+  overflow: auto;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.header h2 {
+  font-weight: 100;
+  font-size: 1em;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('assets/fonts/Montserrat/Montserrat-Regular.otf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  text-rendering: optimizeLegibility;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url('assets/fonts/Montserrat/Montserrat-Italic.otf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url('assets/fonts/Montserrat/Montserrat-Bold.otf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+  text-rendering: optimizeLegibility;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url('assets/fonts/Montserrat/Montserrat-Light.otf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+  text-rendering: optimizeLegibility;
+}
+
+.articles li {
+  padding: 20px
 }
