--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -172,21 +172,42 @@ footer{
 .projects {
 }
 
+
 .projects ul {
   list-style: none;
+  display: flex;
+  flex-direction: row;
+  /* width: 200px; */
+  flex-wrap: wrap
+}
+
+.projects li {
+  flex: 1;
+  padding: 5px;
 }
 
 .projects li img {
-  width: 300px;
+  width: 320px;
+  height: 180px;
 }
 
 .projects section {
   /*height: 300px;*/
 }
 
-.projects section h2 {
-  position: inherit;
+
+.projects li :hover{
+
+}
+
+
+.projects li h2 {
+  position: absolute;
   opacity: 1;
+  font-size: 1.2em;
+  background: gray;
+  width: 320px;
+  text-align: center;
 }
 
 .fadedImg img{
