--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -60,6 +60,9 @@ footer{
   color: rgb(166, 216, 39);
 }
 
+#search {
+  margin-top: -2px;
+}
 
 #searchResults{
   position: absolute;
@@ -78,8 +81,8 @@ footer{
   position: absolute;*/
   width: 100%;
   height: 100%;
-  padding: 20px;
-  padding-top: 5px;
+  /*padding: 20px;
+  padding-top: 5px;*/
   overflow: hidden;
 }
 
@@ -90,12 +93,25 @@ footer{
 .navigation {
   display: flex;
   justify-content: inherit;
-  width: 40%;
-  padding-top: 20px;
-  padding-right: 5px;
+  /* width: 100%; */
+  /* padding-top: 20px; */
+  /* padding-right: 5px; */
+  flex: 1;
+}
+
+.navigation .icon
+{
+  margin-top: -4px;
 }
 
 .infos {
+  display: flex;
+  justify-content: inherit;
+  /* width: 100%; */
+  /* padding-top: 20px; */
+  /* padding-right: 5px; */
+  flex: 1;
+  flex-direction: column;
 }
 
 .content {
@@ -110,14 +126,12 @@ footer{
 }
 
 .header {
-  display: flex;
+  /*display: flex;
   flex-direction: row;
-  justify-content: space-between;
-}
+  flex: 1;
+  flex-flow: column;*/
 
-.header h2 {
-  font-weight: 100;
-  font-size: 1em;
+  justify-content: space-between;
 }
 
 @font-face {
@@ -148,8 +162,18 @@ footer{
   text-rendering: optimizeLegibility;
 }
 
+.articles h2 {
+  margin-bottom: 5px;
+}
+
+.articles ul{
+  margin-top: 0px;
+  padding-left: 12px;
+  list-style: none;
+}
+
 .articles .articlesList li {
-  padding: 20px
+  padding: 5px
 }
 
 .articles .articlesList .item {
@@ -170,6 +194,7 @@ footer{
 }
 
 .projects {
+  width: 100%
 }
 
 
@@ -239,8 +264,13 @@ footer{
 }
 
 .index .articles{
-  width: 50%
+  width: 100%
 }
 .index .articles .articlesList li{
   padding: 2px;
+}
+
+
+h1 {
+  font-size: 1.2em;
 }
