--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -93,6 +93,8 @@ footer{
 .navigation {
   display: flex;
   justify-content: inherit;
+  padding-bottom: 20px;
+
   /* width: 100%; */
   /* padding-top: 20px; */
   /* padding-right: 5px; */
